<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tic_tac_toe2"
    tools:context=".ClassicGameEasyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/toe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toe"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="64sp"
                    android:fontFamily="@font/driving_around"/>
                <TextView
                    android:id="@+id/toe_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toe"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/toe"
                    android:layout_centerHorizontal="true"
                    android:textSize="28sp"
                    android:fontFamily="@font/driving_around"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toe"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="64sp"
                    android:fontFamily="@font/driving_around"/>
                <TextView
                    android:id="@+id/draw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tic"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="64sp"
                    android:fontFamily="@font/driving_around"/>
                <TextView
                    android:id="@+id/draw_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toe"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/draw"
                    android:layout_centerHorizontal="true"
                    android:textSize="28sp"
                    android:fontFamily="@font/driving_around"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tic"
                    android:textColor="@android:color/white"
                    android:layout_centerHorizontal="true"
                    android:textSize="64sp"
                    android:fontFamily="@font/driving_around"/>
                <TextView
                    android:id="@+id/tic_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toe"
                    android:textColor="@android:color/white"
                    android:layout_below="@id/tic"
                    android:layout_centerHorizontal="true"
                    android:textSize="28sp"
                    android:fontFamily="@font/driving_around"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnk3_0_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnk3_0_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnk3_0_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnk3_1_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnk3_1_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnk3_1_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btnk3_2_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnk3_2_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>
                <Button
                    android:id="@+id/btnk3_2_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="84sp"
                    android:textColor="@android:color/black"
                    android:fontFamily="@font/driving_around"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp">
            <Button
                android:id="@+id/tic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tic"
                android:textColor="@android:color/darker_gray"
                android:textSize="42dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:fontFamily="@font/driving_around"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/or_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textColor="@android:color/white"
                    android:textSize="42dp"
                    android:fontFamily="@font/driving_around"/>
            </RelativeLayout>
            <Button
                android:id="@+id/toe_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toe"
                android:textColor="@android:color/darker_gray"
                android:textSize="42dp"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:fontFamily="@font/driving_around"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>